Fix too wide old notification box

--- a/content/themes/dude/sass/views/_single.scss
+++ b/content/themes/dude/sass/views/_single.scss
@@ -180,9 +180,8 @@
     flex-wrap: wrap;
     gap: 1rem 2rem;
     justify-content: center;
-    padding: 3.2rem;
+    padding: 3.2rem 6.4rem;
     text-align: center;
-    width: 100%;
 
     @media (max-width: $container-mobile) {
       padding: 2.4rem;
